deployment/kuberneter/pressandplay-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec:
  rules:
  - host: pressandplay
    http:
      paths:
      - path: /user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 50000
      - path: /court(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: court
            port:
              number: 50000
      - path: /events(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: events
            port:
              number: 50000
